# go2_inekf

./: CMakeLists.txt  package.xml
scripts/: calc_bias_imu.py  fake_imu.py  inekf.py
